# RakNet_Asteroids

./: CMakeLists.txt  README.md
src/client/: Client.cpp  Client.h  ObjectInfo.cpp  ObjectInfo.h  main.cpp
src/common/: Asteroid.cpp  Asteroid.h  Bullet.cpp  Bullet.h  Game.cpp  Game.h  GameStructs.h  MemoryTracker.cpp  MemoryTracker.h  NetworkStructs.h  Object.cpp  Object.h  PhysicsStructs.cpp  PhysicsStructs.h  Ship.cpp  Ship.h  Timer.cpp  Timer.h  Trackable.cpp  Trackable.h
src/server/: Game.cpp  Game.h  Server.cpp  Server.h  main.cpp
